infrastructure/configs/staging/longhorn-ingress.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ts-longhorn-ingress
#   namespace: longhorn-system
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: longhorn-frontend
#       port:
#         number: 80
#   tls:
#     - hosts:
#         - longhorn-s
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
  - host: longhorn-s.boxadvisers.com
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
