infrastructure/configs/staging/longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-longhorn
  namespace: longhorn-system
spec:
  defaultBackend:
    service:
      name: longhorn-frontend
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - longhorn-frontend
